--- a/app/src/main/res/layout/fragment_add_time.xml
+++ b/app/src/main/res/layout/fragment_add_time.xml
@@ -7,69 +7,72 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.timeadding.AddTimeFragment" >
 
-    <TextView
-        android:id="@+id/dateText"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="@string/add_time_date"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.185" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/date"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        style="?android:spinnerStyle"
-        android:hint="@string/date"
-        android:textAlignment="viewStart"
-        android:textColor="@color/black"
-        android:textColorHighlight="@color/toms_200"
-        android:textColorLink="@color/toms_400"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateText" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/timeText"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/add_time_time"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
+            <TextView
+                android:id="@+id/dateText"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:text="@string/add_time_date"
+                android:textStyle="bold|italic" />
 
-    <Button
-        android:id="@+id/time"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        style="?android:spinnerStyle"
-        android:hint="@string/time"
-        android:textAlignment="viewStart"
-        android:textColor="@color/black"
-        android:textColorHighlight="@color/toms_200"
-        android:textColorLink="@color/toms_400"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timeText" />
+            <Button
+                android:id="@+id/date"
+                style="?android:spinnerStyle"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:hint="@string/date"
+                android:textAlignment="viewStart"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/toms_200"
+                android:textColorLink="@color/toms_400" />
 
-    <Button
-        android:id="@+id/saveButton"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/save"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time" />
+            <TextView
+                android:id="@+id/timeText"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:text="@string/add_time_time"
+                android:textStyle="bold|italic" />
+
+            <Button
+                android:id="@+id/time"
+                style="?android:spinnerStyle"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:hint="@string/time"
+                android:hintTextColor="#546E7A"
+                android:textAlignment="viewStart"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/toms_200"
+                android:textColorLink="@color/toms_400" />
+
+            <Button
+                android:id="@+id/saveButton"
+                android:layout_width="210dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="20dp"
+                android:drawableTint="@color/white"
+                android:text="@string/save"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
