--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,11 +8,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="toms_400">#FFA477</color>
+    <!--<color name="toms_400">#FFA477</color>
     <color name="toms_500">#FF8040</color>
     <color name="toms_700">#FF6518</color>
     <color name="toms_100">#FFF2EC</color>
-    <color name="toms_200">#FFEADF</color>
+    <color name="toms_200">#FFEADF</color>-->
+    <color name="toms_400">#F6AA9C</color>
+    <color name="toms_500">#ED9D92</color>
+    <color name="toms_700">#DC8074</color>
+    <color name="toms_100">#FFE9E6</color>
+    <color name="toms_200">#FFDBD5</color>
     <color name="brown_200">#c28c55</color>
     <color name="brown_400">#a86b2c</color>
     <color name="brown_700">#7a440b</color>
