--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="toms_400">#FFA477</color>
     <color name="toms_500">#FF8040</color>
     <color name="toms_700">#FF6518</color>
+    <color name="toms_800">#973200</color>
     <color name="toms_100">#FFF2EC</color>
     <color name="toms_200">#FFEADF</color>
     <!--<color name="toms_400">#F6AA9C</color>
