--- a/app/src/main/res/layout/fragment_global_statistics.xml
+++ b/app/src/main/res/layout/fragment_global_statistics.xml
@@ -7,7 +7,35 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.statistics.GlobalStatisticsFragment" >
 
+    <TextView
+        android:id="@+id/gStatisticsLoadingText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/statistics_loading"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/gStatisticsScrollView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.41000003"
+        tools:visibility="visible" />
+
+    <ProgressBar
+        android:id="@+id/gStatisticsProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
     <ScrollView
+        android:id="@+id/gStatisticsScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,7 +48,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingHorizontal="16dp"
-            android:paddingVertical="16dp" >
+            android:paddingVertical="16dp">
 
             <Button
                 android:id="@+id/gFilter"
@@ -43,19 +71,41 @@
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/gAverageGenderAndAge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/global_statistics_average_gender_and_age_group"
+                android:textStyle="italic"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/gDayBarChart"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="350dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+            </com.github.mikephil.charting.charts.BarChart>
+
+            <TextView
+                android:id="@+id/gAverageDaily"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/global_statistics_average_daily"
+                android:textStyle="italic"
                 android:visibility="gone"
                 tools:visibility="visible" />
 
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/gLongerBarChart"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="350dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:visibility="gone"
@@ -64,7 +114,7 @@
             <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/gLongerPieChart"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="350dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:visibility="gone"
