Some fix with localdate and statistics

--- a/app/src/main/res/layout/custom_activity_list_item.xml
+++ b/app/src/main/res/layout/custom_activity_list_item.xml
@@ -60,7 +60,7 @@
             android:clickable="false"
             android:contextClickable="false"
             android:defaultFocusHighlightEnabled="false"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:cornerRadius="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/activityBasicInfosInList"
