--- a/app/src/main/res/layout/fragment_add_custom_activity.xml
+++ b/app/src/main/res/layout/fragment_add_custom_activity.xml
@@ -69,6 +69,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="@string/name_of_activity"
+                android:maxLength="20"
                 android:inputType="text"
                 android:minHeight="48dp"
                 android:visibility="gone"
